--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<title> Myrakle - Productos de Belleza
 	</title>
 <!-- fav icons -->
-	<link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="https://jopoipo.github.io/Myrakle/images/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="https://jopoipo.github.io/Myrakle/images/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="https://jopoipo.github.io/Myrakle/images/favicon/favicon-16x16.png">
 	<link rel="manifest" href="https://jopoipo.github.io/Myrakle/images/favicon/site.webmanifest">
 	<link rel="mask-icon" href="images/favicon/safari-pinned-tab.svg" color="#5bbad5">
 	<meta name="msapplication-TileColor" content="#2d89ef">
