--- a/salons.html
+++ b/salons.html
@@ -163,125 +163,12 @@
 			</div>
 			
 		</header>
-		<section class="hero">
-			<h1>Bio-Detox <br> Tratamiento Capilar <strong>Reparador</strong></h1>
-
-		</section>
-		<section class="store">
-			<article class="product">
-				<figure class="product-imageContainer">
-					<img src="images/products/p001.png">
-				</figure>
-				<h3>Myrakle Ampolla Argan</h3>
-				<p><small>Tratamiento Termoactivo especial para cabellos maltratados con el poder hidratante del Aceite de Argan</small></p>
-				<h5>₡ 12.000 </h5>
-				<a href="">comprar</a>
-
-			</article>
-			<article class="product">
-				<figure class="product-imageContainer">
-					<img src="images/products/p002.png">
-				</figure>
-				<h3>Myrakle Ampolla Brillo de Seda</h3>
-				<p><small> Descripcion del produco</small></p>
-				<h5>₡ 12.000 </h5>
-				<a href="">comprar</a>
-
-			</article>
-			<article class="product">
-				<figure class="product-imageContainer">
-					<img src="images/products/p003.png">
-				</figure>
-				<h3>Myrakle Ampolla Semi di Lino</h3>
-				<p><small> Descripcion del produco</small></p>
-				<h5>₡ 12.000 </h5>
-				<a href="">comprar</a>
-
-			</article>
-			<article class="product">
-				<figure class="product-imageContainer">
-					<img src="images/products/p004.png">
-				</figure>
-				<h3>Myrakle Ampola Vitamina E</h3>
-				<p><small> Descripcion del produco</small></p>
-				<h5>₡ 12.000</h5>
-				<a href="">comprar</a>
-
-			</article>
-			<article class="product">
-				<figure class="product-imageContainer">
-					<img src="images/products/p005.png">
-				</figure>
-				<h3>Myrakle Cocktail Argan</h3>
-				<p><small> Descripcion del produco</small></p>
-				<h5>₡ 12.000</h5>
-				<a href="">comprar</a>
-
-			</article>
-			<article class="product">
-				<figure class="product-imageContainer">
-					<img src="images/products/p006.png">
-				</figure>
-				<h3>Myrakle Cocktail Semi di Lino</h3>
-				<p><small> Descripcion del produco</small></p>
-				<h5>₡ 12.000</h5>
-				<a href="">comprar</a>
-
-			</article>
-			<article class="product">
-				<figure class="product-imageContainer">
-					<img src="images/products/p007.png">
-				</figure>
-				<h3>Myrakle Cocktail Brillo de Seda</h3>
-				<p><small> Descripcion del produco</small></p>
-				<h5>₡ 12.000</h5>
-				<a href="">comprar</a>
-
-			</article>
-			<article class="product">
-				<figure class="product-imageContainer">
-					<img src="images/products/p008.png">
-				</figure>
-				<h3>Myrakle Cocktail Vitamina E</h3>
-				<p><small> Descripcion del produco</small></p>
-				<h5>₡ 12.000</h5>
-				<a href="">comprar</a>
-
-			</article>
+		<section class="">
 			
 		</section>
-		<section class="categories">
-			
-			<a class="ampollas" href="">
-				<div class="button">
-					<h2>Ampollas</h2>
-				</div>
-			</a>
-			<a class="cocktails" href="">
-				<div class="button">
-					<h2>Cocktails</h2>
-				</div>
-			</a>
-			<a class="tratamientos" href="">
-				<div class="button">
-					<h2>Tratamientos</h2>
-				</div>
-			</a>
-			
-			
-			
-		</section>
-		<section class="signup">
-			<form action="">
-				<h3>Quieres una demostracion Gratis</h3>
-				<p>Si eres profesional vamos a tu salon, tu eliges la modelo, y dejate improsionar por Myrakle.</p>
-				<input class="signupName" type="text" name="name" placeholder="tu nombre">
-				<input class="signupPhone" type="text" name="phone" placeholder="tu telefono">
-				<input class="signupEmail" type="text" name="email" placeholder="tu email" id="email">
-				<input class="signupSubmit" type="submit" name="submit-btn" value="enviar">
-				
-			</form>
-		</section>
+
+
+		
 		<footer class="footer">
 			<div class="footertop">
 				
@@ -300,7 +187,7 @@
 							<a href="">Preguntas Frecuentes</a>
 						</li>
 						<li>
-							<a href="salons.html">Encuentra un Salon</a>
+							<a href="">Encuentra un Salon</a>
 						</li>
 						<li>
 							<a href="">Distribuidores</a>
