--- a/cocktails.html
+++ b/cocktails.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title> Myrakle - Productos de Belleza
+	<title> Myrakle - Cocktails Capilares
 	</title>
 <!-- fav icons -->
 	<link rel="apple-touch-icon" sizes="180x180" href="https://jopoipo.github.io/Myrakle/images/favicon/apple-touch-icon.png">
@@ -149,7 +149,7 @@
 							<a href="">Ampollas</a>
 						</li>
 						<li>
-							<a href="cocktails.html">Cocktails</a>
+							<a href="">Cocktails</a>
 						</li>
 						<li>
 							<a href="">Encuentra un Salon</a>
@@ -163,93 +163,7 @@
 			</div>
 			
 		</header>
-		<section class="hero">
-			<h1>Bio-Detox <br> Tratamiento Capilar <strong>Reparador</strong></h1>
-
-		</section>
-		<section class="store">
-			<article class="product">
-				<figure class="product-imageContainer">
-					<img src="images/products/p001.png">
-				</figure>
-				<h3>Myrakle Ampolla Argan</h3>
-				<p><small>Tratamiento Termoactivo especial para cabellos maltratados con el poder hidratante del Aceite de Argan</small></p>
-				<h5>₡ 12.000 </h5>
-				<a href="">comprar</a>
-
-			</article>
-			<article class="product">
-				<figure class="product-imageContainer">
-					<img src="images/products/p002.png">
-				</figure>
-				<h3>Myrakle Ampolla Brillo de Seda</h3>
-				<p><small> Descripcion del produco</small></p>
-				<h5>₡ 12.000 </h5>
-				<a href="">comprar</a>
-
-			</article>
-			<article class="product">
-				<figure class="product-imageContainer">
-					<img src="images/products/p003.png">
-				</figure>
-				<h3>Myrakle Ampolla Semi di Lino</h3>
-				<p><small> Descripcion del produco</small></p>
-				<h5>₡ 12.000 </h5>
-				<a href="">comprar</a>
-
-			</article>
-			<article class="product">
-				<figure class="product-imageContainer">
-					<img src="images/products/p004.png">
-				</figure>
-				<h3>Myrakle Ampola Vitamina E</h3>
-				<p><small> Descripcion del produco</small></p>
-				<h5>₡ 12.000</h5>
-				<a href="">comprar</a>
-
-			</article>
-			<article class="product">
-				<figure class="product-imageContainer">
-					<img src="images/products/p005.png">
-				</figure>
-				<h3>Myrakle Cocktail Argan</h3>
-				<p><small> Descripcion del produco</small></p>
-				<h5>₡ 12.000</h5>
-				<a href="">comprar</a>
-
-			</article>
-			<article class="product">
-				<figure class="product-imageContainer">
-					<img src="images/products/p006.png">
-				</figure>
-				<h3>Myrakle Cocktail Semi di Lino</h3>
-				<p><small> Descripcion del produco</small></p>
-				<h5>₡ 12.000</h5>
-				<a href="">comprar</a>
-
-			</article>
-			<article class="product">
-				<figure class="product-imageContainer">
-					<img src="images/products/p007.png">
-				</figure>
-				<h3>Myrakle Cocktail Brillo de Seda</h3>
-				<p><small> Descripcion del produco</small></p>
-				<h5>₡ 12.000</h5>
-				<a href="">comprar</a>
-
-			</article>
-			<article class="product">
-				<figure class="product-imageContainer">
-					<img src="images/products/p008.png">
-				</figure>
-				<h3>Myrakle Cocktail Vitamina E</h3>
-				<p><small> Descripcion del produco</small></p>
-				<h5>₡ 12.000</h5>
-				<a href="">comprar</a>
-
-			</article>
-			
-		</section>
+		
 		<section class="categories">
 			
 			<a class="ampollas" href="">
