cambio del fondo y letras en cocktails

--- a/cocktails.html
+++ b/cocktails.html
@@ -29,6 +29,7 @@
 <!-- iconos -->
 </head>
 <body>
+	
 	<div class="wrapper">
 		<header class="header">
 			<div class="header-top">
@@ -164,38 +165,15 @@
 			
 		</header>
 		
-		<section class="categories">
-			
-			<a class="ampollas" href="">
-				<div class="button">
-					<h2>Ampollas</h2>
-				</div>
-			</a>
-			<a class="cocktails" href="">
-				<div class="button">
-					<h2>Cocktails</h2>
-				</div>
-			</a>
-			<a class="tratamientos" href="">
-				<div class="button">
-					<h2>Tratamientos</h2>
-				</div>
-			</a>
-			
-			
-			
+		<section class="herococktails">
+			<div class="containerherococktails">
+				<h1>COCKTAIL CAPILAR EFECTO AMPOLLA <br> Resultados desde la primera aplicación <strong> <br> Satisfacción Garantizada</strong></h1>
+				<figure class="product-imageContainer">
+					<img src="images/products/p001.png">
+				</figure> 
+			</div>
 		</section>
-		<section class="signup">
-			<form action="">
-				<h3>Quieres una demostracion Gratis</h3>
-				<p>Si eres profesional vamos a tu salon, tu eliges la modelo, y dejate improsionar por Myrakle.</p>
-				<input class="signupName" type="text" name="name" placeholder="tu nombre">
-				<input class="signupPhone" type="text" name="phone" placeholder="tu telefono">
-				<input class="signupEmail" type="text" name="email" placeholder="tu email" id="email">
-				<input class="signupSubmit" type="submit" name="submit-btn" value="enviar">
-				
-			</form>
-		</section>
+		
 		<footer class="footer">
 			<div class="footertop">
 				
