faq y contacto agregados

--- a/cocktails.html
+++ b/cocktails.html
@@ -169,7 +169,7 @@
 			<div class="containerherococktails">
 				<h1>COCKTAIL CAPILAR EFECTO AMPOLLA <br> Resultados desde la primera aplicación <strong> <br> Satisfacción Garantizada</strong></h1>
 				<figure class="product-imageContainer">
-					<img src="images/products/p001.png">
+					<img src="images/cocktailsHero.png">
 				</figure> 
 			</div>
 		</section>
